--- a/basketball/src/styles.css
+++ b/basketball/src/styles.css
@@ -1,4 +1,4 @@
-{
+* {
   box-sizing: border-box;
 }
 
@@ -12,12 +12,37 @@ body{
   color:lightgray;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   gap: 2tem;
   padding: 0 1rem;
 }
 
+.site-title{
+  font-size: 2rem;
+}
+
+.nav ul{
+  padding:0;
+  margin:0;
+  list-style: none;
+  display:flex;
+  gap: 1rem;
+}
+
 .nav a {
   color:inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: .25rem;
 
+}
+
+.nav li.active{
+  background-color: rgba(126, 126, 126, 0.712);
+}
+
+.nav li:hover{
+  background-color: rgba(255, 167, 59, 0.719);
 }
